--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "font-awesome": "^4.7.0",
+    "vue": "^2.6.11",
+    "vued3tree": "^5.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
